Update Portfolio Mock Execution.ipynb, mock_trading.py, portfolio_building_tutorial.ipynb, and 9 more files

--- a/examples/markets/portfolios/portfolio_building_tutorial.ipynb
+++ b/examples/markets/portfolios/portfolio_building_tutorial.ipynb
@@ -54,7 +54,7 @@
     "dotenv.load_dotenv('.env')\n",
     "from mainsequence.client import DataUpdates\n",
     "import datetime\n",
-    "from mainsequence.client import TargetPortfolio, Asset,TargetPortfolioIndexAsset\n",
+    "from mainsequence.client import Portfolio, Asset,PortfolioIndexAsset\n",
     "from mainsequence.client import MARKETS_CONSTANTS\n"
    ],
    "outputs": [
@@ -98,9 +98,9 @@
    },
    "source": [
     "\n",
-    "# Query a single TargetPortfolio with a specific ticker\n",
+    "# Query a single Portfolio with a specific ticker\n",
     "portfolio_ticker = \"TICKER1\"\n",
-    "portfolio = TargetPortfolio.filter(portfolio_ticker=portfolio_ticker)\n",
+    "portfolio = Portfolio.filter(portfolio_ticker=portfolio_ticker)\n",
     "print(\"Queried Portfolio:\", portfolio)\n"
    ],
    "outputs": [
@@ -508,20 +508,20 @@
     "def create_portfolio(build_purpose, portfolio_name,portfolio_ts,valuation_asset):\n",
     "    \n",
     "    \n",
-    "    existing_portfolio = TargetPortfolio.get_or_none(\n",
+    "    existing_portfolio = Portfolio.get_or_none(\n",
     "       \n",
     "        local_time_serie__id=portfolio_ts.local_metadata.id\n",
     "    )\n",
     "    \n",
     "    if existing_portfolio:\n",
     "        print(f\"Portfolio '{portfolio_name}' already exists.\")\n",
-    "        index_asset=TargetPortfolioIndexAsset.get(reference_portfolio__id=existing_portfolio.id)\n",
+    "        index_asset=PortfolioIndexAsset.get(reference_portfolio__id=existing_portfolio.id)\n",
     "        \n",
     "        \n",
     "        return existing_portfolio,index_asset\n",
     "    \n",
     "    \n",
-    "    return TargetPortfolio.create_from_time_series(\n",
+    "    return Portfolio.create_from_time_series(\n",
     "        portfolio_name=portfolio_name,\n",
     "        build_purpose=build_purpose,\n",
     "        is_active=True,\n",
