--- a/examples/markets/time_series_details/markets_time_series.ipynb
+++ b/examples/markets/time_series_details/markets_time_series.ipynb
@@ -61,7 +61,7 @@
     "dotenv.load_dotenv('.env')\n",
     "from mainsequence.client import DataUpdates\n",
     "import datetime\n",
-    "from mainsequence.client import TargetPortfolio, Asset,TargetPortfolioIndexAsset\n",
+    "from mainsequence.client import Portfolio, Asset,PortfolioIndexAsset\n",
     "from mainsequence import MARKETS_CONSTANTS \n",
     "from mainsequence.client import MarketsTimeSeriesDetails\n"
    ],
