Update Getting Started.ipynb, simple_portfolio_run.py, gpt_instructions_ms_client.md, and 5 more files

--- a/examples/markets/accounts/accounts_tutorial.ipynb
+++ b/examples/markets/accounts/accounts_tutorial.ipynb
@@ -335,7 +335,10 @@
      "start_time": "2025-05-19T11:28:28.513185Z"
     }
    },
-   "source": "accounts[0].uuid",
+   "source": [
+    "accounts[0].uuid\n",
+    "target_account=accounts[0]"
+   ],
    "outputs": [
     {
      "data": {
@@ -349,6 +352,29 @@
     }
    ],
    "execution_count": 12
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": ""
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "import mainsequence.client as ms_client\n",
+    "\n",
+    "historical_holdings=target_account.get_historical_holdings(start_date=datetime.datetime(2025,6,1))\n",
+    "#pd.DataFrame: A DataFrame indexed by a multi-index of `time_index` (UTC datetime) and `asset_id` (int),\n",
+    " #      If we want to add extra information relating the assets we need to query the assets as well\n",
+    "\n",
+    "\n",
+    "assets_in_account=ms_client.Asset.filter(id__in=historical_holdings.index.get_level_values(\"asset_id\").to_list())\n",
+    "id_map={a.id:a.name for a in assets_in_account}\n",
+    "historical_holdings[\"asset_name\"]=historical_holdings.index.get_level_values(\"asset_id\").map(id_map)"
+   ]
   }
  ],
  "metadata": {
