Update portfolio_building_tutorial.ipynb, simple_simulated_prices.py, __init__.py, and 7 more files

--- a/examples/markets/portfolios/portfolio_building_tutorial.ipynb
+++ b/examples/markets/portfolios/portfolio_building_tutorial.ipynb
@@ -52,7 +52,7 @@
     "\n",
     "import dotenv\n",
     "dotenv.load_dotenv('.env')\n",
-    "from mainsequence.client import DataUpdates\n",
+    "from mainsequence.client import UpdateStatistics\n",
     "import datetime\n",
     "from mainsequence.client import Portfolio, Asset,PortfolioIndexAsset\n",
     "from mainsequence.client import MARKETS_CONSTANTS\n"
@@ -151,7 +151,7 @@
    },
    "source": [
     "from mainsequence.tdag.time_series import TimeSerie\n",
-    "from mainsequence.client import DataUpdates\n",
+    "from mainsequence.client import UpdateStatistics\n",
     "import numpy as np\n",
     "import datetime\n",
     "import pandas as pd\n",
