Update load_and_snap_account.py, assets_tutorial.ipynb, build_portfolio_from_configuration.py, and 3 more files

--- a/examples/markets/assets/assets_tutorial.ipynb
+++ b/examples/markets/assets/assets_tutorial.ipynb
@@ -207,9 +207,9 @@
     "\n",
     "1) An asset will always be created with a synthetic Fiji, inferred from a combination of ticker, exchange_code, security_type, market_sector, and security_type_2, with exchange_code set as None.\n",
     "\n",
-    "2) The main_sequence_share_class is inferred from the combination of ticker, security_type, market_sector, and security_type_2. The purpose of this class is to enable working with the same asset across both backtesting and analysis environments without being dependent on a specific exchange. For instance, when referencing a fundamentals table, we want an NVDA asset representation that remains independent of any specific exchange_code.\n",
+    "2) The asset_ticker_group_id is inferred from the combination of ticker, security_type, market_sector, and security_type_2. The purpose of this class is to enable working with the same asset across both backtesting and analysis environments without being dependent on a specific exchange. For instance, when referencing a fundamentals table, we want an NVDA asset representation that remains independent of any specific exchange_code.\n",
     "\n",
-    "For this reason, in the example below, we have five assets with the ticker NVDA. One asset trades through Alpaca with a general US reference as its execution_venue and shares the same main_sequence_share_class as two other assets in the Main Sequence EV—one with no exchange code and one trading on the Vienna Stock Exchange."
+    "For this reason, in the example below, we have five assets with the ticker NVDA. One asset trades through Alpaca with a general US reference as its execution_venue and shares the same asset_ticker_group_id as two other assets in the Main Sequence EV—one with no exchange code and one trading on the Vienna Stock Exchange."
    ],
    "id": "7d37920fd41d7861"
   },
@@ -227,7 +227,7 @@
     "print(len(assets_in_venue))\n",
     "\n",
     "for a in assets_in_venue:\n",
-    "    print(a.ticker,a.main_sequence_share_class,a.unique_identifier,a.exchange_code,a.execution_venue.symbol)\n",
+    "    print(a.ticker,a.asset_ticker_group_id,a.unique_identifier,a.exchange_code,a.execution_venue.symbol)\n",
     "   \n",
     "\n"
    ],
@@ -315,7 +315,7 @@
     "\n",
     "**Important**\n",
     "\n",
-    "When you register a non-FIGI asset, the platform will infer the FIGI by concatenating its ticker, exchange_code, security_type, market_sector, and security_type_2. Likewise, the main_sequence_share_class is inferred from ticker, security_type, market_sector, and security_type_2. Finally, the asset’s unique identifier is always formatted as `f\"{asset.ticker}_{asset.execution_venue.symbol}_{asset.figi}_{request.user.organization.uuid}\"`\n",
+    "When you register a non-FIGI asset, the platform will infer the FIGI by concatenating its ticker, exchange_code, security_type, market_sector, and security_type_2. Likewise, the asset_ticker_group_id is inferred from ticker, security_type, market_sector, and security_type_2. Finally, the asset’s unique identifier is always formatted as `f\"{asset.ticker}_{asset.execution_venue.symbol}_{asset.figi}_{request.user.organization.uuid}\"`\n",
     "\n",
     "Please note that Security Type, Security Type 2, Market Sector, and Exchange Code must appear on the allowed lists (see https://www.openfigi.com/api/documentation); if they do not, leave them as None.\n",
     "\n",
@@ -420,8 +420,8 @@
     "\n",
     "# Get them through the main sequence FIGI class and exchange\n",
     "binance_currency_pairs = AssetCurrencyPair.filter(\n",
-    "    base_asset__main_sequence_share_class__in=[\n",
-    "        a.main_sequence_share_class for a in spot_assets\n",
+    "    base_asset__asset_ticker_group_id__in=[\n",
+    "        a.asset_ticker_group_id for a in spot_assets\n",
     "    ],\n",
     "    execution_venue__symbol=MARKETS_CONSTANTS.BINANCE_EV_SYMBOL,\n",
     "    quote_asset__ticker=\"USDT\",\n",
