Update llm-instructions-time-series.md, index.html, index.html, and 41 more files

--- a/examples/markets/portfolios/portfolio_building_tutorial.ipynb
+++ b/examples/markets/portfolios/portfolio_building_tutorial.ipynb
@@ -150,13 +150,13 @@
     }
    },
    "source": [
-    "from mainsequence.tdag.time_series import TimeSerie\n",
+    "from mainsequence.tdag.data_nodes import DataNode\n",
     "from mainsequence.client import UpdateStatistics\n",
     "import numpy as np\n",
     "import datetime\n",
     "import pandas as pd\n",
     "\n",
-    "class PortfolioExample(TimeSerie):\n",
+    "class PortfolioExample(DataNode):\n",
     "    \n",
     "    def __init__(self, portfolio_volatility: float,*args, **kwargs):\n",
     "        self.portfolio_volatility = portfolio_volatility\n",
