Update index.html, __main__.py, simple_simulated_prices.py, and 33 more files

--- a/examples/getting_started/Getting Started.ipynb
+++ b/examples/getting_started/Getting Started.ipynb
@@ -130,7 +130,7 @@
     "collapsed": true
    },
    "source": [
-    "from mainsequence.virtualfundbuilder.contrib.time_series import MarketCap\n",
+    "from mainsequence.virtualfundbuilder.contrib.data_nodes import MarketCap\n",
     "\n",
     "portfolio = tdag_agent.generate_portfolio(MarketCap, signal_description=\"Create me a market cap portfolio using MAG 7 assets\")"
    ],
