refactor client library naming for metadata to data_node_storage

--- a/examples/markets/portfolios/portfolio_building_tutorial.ipynb
+++ b/examples/markets/portfolios/portfolio_building_tutorial.ipynb
@@ -75,7 +75,7 @@
    "metadata": {},
    "source": [
     "## Step 2: Query Portfolios\n",
-    "We query an existing portfolio using the `local_time_serie_hash_id` filter. This returns a single portfolio object."
+    "We query an existing portfolio using the `data_node_update_hash_id` filter. This returns a single portfolio object."
    ]
   },
   {
@@ -127,7 +127,7 @@
     "If you want to start building portfolios we recommend you to use our VirtualFundBuilder. This will help you have a more fluid \n",
     "and seamless workflows. In this example we will show you how to build a portfolio without using our Wrapper. A few important considerations\n",
     "\n",
-    "1.  Each portfolio requires a `local_signal_time_serie` and a `local_time_serie` that should come from TDAG, this is a unique identifier in the backend and placing a random integer will likely collide therefore we need to build a time serie that has a time_index and at least a column with a column \"close\" \n",
+    "1.  Each portfolio requires a `signal_data_node_update` and a `data_node_update` that should come from TDAG, this is a unique identifier in the backend and placing a random integer will likely collide therefore we need to build a time serie that has a time_index and at least a column with a column \"close\"\n",
     "\n"
    ]
   },
@@ -495,7 +495,7 @@
     "    \n",
     "    existing_portfolio = msc.Portfolio.get_or_none(\n",
     "       \n",
-    "        local_time_serie__id=portfolio_ts.local_metadata.id\n",
+    "        data_node_update__id=portfolio_ts.data_node_update.id\n",
     "    )\n",
     "    \n",
     "    if existing_portfolio:\n",
@@ -509,8 +509,8 @@
     "    return msc.Portfolio.create_from_time_series(\n",
     "        portfolio_name=portfolio_name,\n",
     "        is_active=True,\n",
-    "        local_time_serie_id=portfolio_ts.local_metadata.id,  # Example ID\n",
-    "        signal_local_time_serie_id=portfolio_ts.local_metadata.id, #we are not using a signal so we are setting the same \n",
+    "        data_node_update_id=portfolio_ts.data_node_update.id,  # Example ID\n",
+    "        signal_data_node_update_id=portfolio_ts.data_node_update.id, #we are not using a signal so we are setting the same\n",
     "        calendar_name=\"24/7\",\n",
     "        is_asset_only=False,\n",
     "        backtest_table_price_column_name=\"close\",\n",
